Fix figure spacing

--- a/src/styles/partials/_elements.scss
+++ b/src/styles/partials/_elements.scss
@@ -27,3 +27,7 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+
+figure {
+	margin: $grid-gutter-width 0;
+}
